--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <nav class="nav nav-tabs">
+    <nav class="nav-bar">
       <% if user_signed_in? %>
         Signed in as: <strong><%= current_user.email %></strong> |
         <%= link_to 'Edit Profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
