--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,19 @@
 <body>
   <div class="container">
     <nav class="nav-bar">
-      <div class="user-info">
-        <% if user_signed_in? %>
-          Hello <strong><%= current_user.name %></strong> |
-          <%= link_to 'Edit Profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
-        <% else %>
-          <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %> -
-          <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %>
-        <% end %>
-      </div>
+      <ul>
+        <li><%= link_to "Wikis", wikis_path %></li>
+        <li><%= link_to "About", about_path %></li>
+      </ul>
+        <div class="user-info">
+          <% if user_signed_in? %>
+            Hello <strong><%= current_user.name %></strong> |
+            <%= link_to 'Edit Profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
+          <% else %>
+            <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %> -
+            <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %>
+          <% end %>
+        </div>
     </nav>
 
     <p class="notice"><%= notice %></p>
