--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,12 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<% if current_user.role == "standard" %>
+  <%= form_tag charges_path, class: "become-premium-form" do %>
+     <h4>Become a premium member!</h4>
+     <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount=<%= @stripe_btn_data[:amount] %> data-description="<%= @stripe_btn_data[:description] %>" ></script>
+  <% end %>
+<% end %>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -35,6 +42,10 @@
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
+<% end %>
+
+<% if current_user.role == "premium" %>
+  <%= button_to "Downgrade my account", downgrade_path, class: "downgrade", data: { confirm: "Are you sure you want to downgrade? You will be charged again if you ever want to upgrade to premium again." } %>
 <% end %>
 
 <h3>Cancel my account</h3>
