--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       </ul>
         <div class="user-info">
           <% if user_signed_in? %>
-            Hello <strong><%= current_user.name %></strong> |
+            Hello <strong><%= current_user.name %> - <%= current_user.role.capitalize %></strong> |
             <%= link_to 'Edit Profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
           <% else %>
             <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %> -
@@ -24,8 +24,11 @@
         </div>
     </nav>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if notice %>
+      <p class="flash-notice"><%= notice %></p>
+    <% elsif alert %>
+      <p class="flash-alert"><%= alert %></p>
+    <% end %>
 
     <%= yield %>
   </div>
