--- a/app/assets/stylesheets/collaborators.scss
+++ b/app/assets/stylesheets/collaborators.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Collaborators controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.collaborator-item {
+  padding: 10px 0;
+
+  form {
+    display: inline-block;
+  }
+
+  input[type="submit"] {
+    border: 0;
+    background: #fff;
+    text-decoration: underline;
+    color: #00f;
+  }
+}
